--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@sanity/client": "^6.27.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.74.0",
+    "@types/eslint": "^9.6.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.473.0",
@@ -29,7 +30,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4",
+    "eslint-config-next": "^15.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
