--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.74.0",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
