--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@sanity/vision": "^3.74.0",
     "@types/eslint": "^9.6.1",
     "axios": "^1.7.9",
+    "doc-path": "^4.1.2",
     "dotenv": "^16.4.7",
+    "json-2-csv": "^5.5.8",
     "lucide-react": "^0.473.0",
     "next": "^15.0.4",
     "next-sanity": "^9.8.49",
